Working on attendance module

--- a/application/views/scripts/attendance/index.phtml
+++ b/application/views/scripts/attendance/index.phtml
@@ -8,6 +8,7 @@
         <div class="span9">
           <h3>Attendance</h3>
         
-            <?= $this->attendanceform; ?>
+            <?= $this->attendanceform; ?><br />
+            <?= $this->grid; ?>
       </div>
     </div>
