--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,12 +1,11 @@
 
 
-<BR/><BR/><BR/><BR/>
-
+<BR/>
 <div class="container">
 
 
 
-    <h1><BR/></h1>
+    <h1><BR/></h1>`
     <p class="marketing-byline"></p>
 
     <div class="row">
@@ -17,7 +16,7 @@
 Educulas is a next generation learning initiative by Actuality.
 </p> Learning initiatives must continuously innovate to remain competitive or to bring brighter pupils. See how our model can help your growth.
 
-<BR/><BR/><a href="" class="btn btn-inverse "><strong>Plans, Pricing and Signup</strong> <br/>Demo available for <em>free!</em></a>
+<BR/><BR/><a href="" class="btn btn-danger "><strong>Plans, Pricing and Signup</strong> <br/>Demo available for <em>free!</em></a>
 
 
 
@@ -52,7 +51,18 @@ Educulas is a next generation learning initiative by Actuality.
 <button type="submit" class="btn btn-primary">Sign in</button></form>
 
       </div>
+
+            <div class="clear"></div>
+        <div style="position: absolute;
+width: 434px;
+z-index: -1;
+margin-top: 5px;
+background-image: url(http://zicedemo.com/images/shadowForm.png);
+height: 33px;
+margin-left: -20px;"></div>
+
       </div>
+      
 
 
 
