--- a/application/views/scripts/attendance/show.phtml
+++ b/application/views/scripts/attendance/show.phtml
@@ -5,12 +5,12 @@
  <?php
         $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
  ?>
-  
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <link rel ="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/flick/jquery-ui.css" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="<?=$baseUrl;?>/stuff/css/custom.css" />
-  
+
 
        <style type="text/css">
         .tabgrid {
@@ -18,25 +18,37 @@
         }
 
         #tabs>div{
-            margin: 0;
-            padding: 0;
+         /*   margin: 0;
+            padding: 0;*/
         }
     </style>
 
 <script type="text/javascript">
-  //<![CDATA[
+
       jQuery(document).ready(function(){
-      
+
       var mi = <?=$this->month;?>;
 
      jQuery("#tabs").tabs({
          collapsible: false,
          width:'100%',
-         selected:<?= $this->month - 1; ?>       
+         selected:<?= $this->month - 1; ?>
 
-     });     
+     });
+     jQuery('*[data-month ="'+mi+'"]').bind('click',function(){
+     jQuery("#jqgrid").load('attendance/showgrid',{month:mi,year:<?=$this->year;?>,classy:<?=$this->classy;?>});
+              //return false;
+      });
 
-      //]]>
+        jQuery('*[data-month ="'+mi+'"]').trigger('click');
+
+        jQuery("#tabs>ul>li>a").click(function(){
+            jQuery('.loader').show();
+            var month = jQuery(this).attr("data-month");
+            jQuery("#jqgrid").load('attendance/showgrid',{month:month,year:<?=$this->year;?>,classy:<?=$this->classy;?>},function(){jQuery(".loader").hide(); });
+              return false;
+         });
+     });
     </script>
 
 
@@ -61,14 +73,14 @@
             <li><a href="#jqgrid" data-month="11">nov</a></li>
             <li><a href="#jqgrid" data-month="12">dec</a></li>
         </ul>
-      
+
         <div id="jqgrid">
-            <div class="loader" style="display: block;"><img src ="<?=$baseUrl;?>/stuff/img/blpbar.gif" /><br /> Loading...</div>
+
         </div>
 
-       
+
     </div>
-    
-   
+
+
 </body>
 </html>
