--- a/application/views/scripts/attendance/showgrid.phtml
+++ b/application/views/scripts/attendance/showgrid.phtml
@@ -5,9 +5,12 @@
  <?php
         $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
  ?>
- <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/i18n/grid.locale-en.js"></script>    
- <link rel="stylesheet" type="text/css" href="<?=$baseUrl;?>/stuff/css/ui.jqgrid.css" />       
- <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/jquery.jqGrid.min.js"></script> 
+ <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/i18n/grid.locale-en.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <link rel ="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/flick/jquery-ui.css" />
+    <link rel="stylesheet" type="text/css" href="<?=$baseUrl;?>/stuff/css/ui.jqgrid.css" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/jquery.jqGrid.min.js"></script>
 
 <style type="text/css">
         .tabgrid {
@@ -17,11 +20,9 @@
 
 <script type="text/javascript">
  //<![CDATA[
- jQuery(document).ready(function(){
- 
+  jQuery(document).ready(function(){
 
      var mydata = <?= $this->attdsheet; ?>;
-
 
         jQuery("#list").jqGrid({
             data: mydata,
@@ -31,15 +32,16 @@
             pager: '#pager',
             rowNum: 10,
             rowList: [5, 10, 20, 50],
-            forceFit : true,
-	    cellEdit: true,
-	    cellsubmit: 'clientArray',
+            sortname: 'stud',
+            sortorder: 'asc',
             viewrecords: true,
             gridview: true,
+            forcefit: true,
             shrinktofit:true,
             autowidth: true,
-            scrollOffset:0,
-            caption:<?= $this->month; ?>
+            celledit : true,
+            height:"90%",
+            caption:<?=$this->month; ?>
         });
    });
 
@@ -50,7 +52,7 @@
 
 <table id="list">
 </table>
-<div id="pager"></div>    
+<div id="pager"></div>
 
 </body>
 </html>
