--- a/application/views/scripts/attendance/showgrid.phtml
+++ b/application/views/scripts/attendance/showgrid.phtml
@@ -41,7 +41,7 @@
             autowidth: true,
             celledit : true,
             height:"90%",
-            caption:<?=$this->month; ?>
+            caption:'Response: Attendance sheet for month <?=$this->month; ?>'
         });
    });
 
