--- a/application/views/scripts/staff/index.phtml
+++ b/application/views/scripts/staff/index.phtml
@@ -5,7 +5,8 @@
       </div>
       <div id="content" class="span9">
 
-        <!-- File structure
+          <div id="view-content" class="dashboard shadowbox">
+          <!-- File structure
         ================================================== -->
       
           <div class="page-header">
