--- a/application/views/scripts/attendance/show.phtml
+++ b/application/views/scripts/attendance/show.phtml
@@ -24,7 +24,7 @@
     </style>
 
 <script type="text/javascript">
-
+//<![CDATA[
       jQuery(document).ready(function(){
 
       var mi = <?=$this->month;?>;
@@ -43,12 +43,14 @@
         jQuery('*[data-month ="'+mi+'"]').trigger('click');
 
         jQuery("#tabs>ul>li>a").click(function(){
-            jQuery('.loader').show();
+           jQuery('.loader').show();
             var month = jQuery(this).attr("data-month");
             jQuery("#jqgrid").load('attendance/showgrid',{month:month,year:<?=$this->year;?>,classy:<?=$this->classy;?>},function(){jQuery(".loader").hide(); });
               return false;
          });
      });
+
+ //]]>
     </script>
 
 
@@ -58,7 +60,7 @@
 
     <div id="tabs">
 
-        <div class="loader"><img src ="<?=$baseUrl;?>/stuff/img/ajax-loader.gif"><br /> Loading...</div>
+       
         <ul>
             <li><a href="#jqgrid" data-month="1">jan</a></li>
             <li><a href="#jqgrid" data-month="2">feb</a></li>
@@ -75,7 +77,7 @@
         </ul>
 
         <div id="jqgrid">
-
+             <div class="loader"><img src ="<?=$baseUrl;?>/stuff/img/ajax-loader.gif"><br /> Loading...</div>
         </div>
 
 
