--- a/application/views/scripts/staff/home.phtml
+++ b/application/views/scripts/staff/home.phtml
@@ -6,22 +6,24 @@
 <?php echo $this -> partial('staff/sidebar.phtml');?>
       </div>
       <div class="span9">
-        <!-- File structure
+          <div id="view-content" class="dashboard shadowbox">
+          <!-- File structure
         ================================================== -->
         <section id="file-structure">
           <div class="page-header">
             <h1>Welcome <?=$this->profname;?>,</h1>
           </div>
-    <p class="lead">Your dream to build careers of many young minds begins here. Educulas ia all about enriching others dreams. Thanks for signing up.<BR/>
-
+    <p class="lead">Your dream to build careers of many young minds begins here.<br />
 </p>
 
 <BR/><BR/>
 
-1. Setup your school now<BR/><BR/>
+1. Mark attendance of your classes<BR/><BR/>
 2. Find how your wards are faring<BR/><BR/>
-3. Get in touch with your staffs, professors, students and parents.<BR/><BR/>
+3. Get in touch with other staffs, professors, students and parents.<BR/><BR/>
 </section>
+
+          </div>
 
   </div>
     </div>
