--- a/application/views/scripts/attendance/index.phtml
+++ b/application/views/scripts/attendance/index.phtml
@@ -27,7 +27,7 @@
       'attendance/show',
       array('update' => '.agrid',
             'form'=>'.form-vertical',
-            'attribs' => array('class' => 'btn btn-primary'),
+            'attribs' => array('class' => 'btn btn-primary','data-loading-text' => 'Loading...'),
              'method' => 'post'),
       array('dataType' => 'json')
       );
