--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -41,7 +41,9 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    <script type="text/javascript">
+    $('.btn').button('loading');
+    </script>
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="/stuff/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/stuff/ico/apple-touch-icon-144-precomposed.png">
