--- a/application/views/scripts/attendance/showgrid.phtml
+++ b/application/views/scripts/attendance/showgrid.phtml
@@ -5,11 +5,15 @@
  <?php
         $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
  ?>
- <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/i18n/grid.locale-en.js"></script>
+ 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <link rel ="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/flick/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" href="<?=$baseUrl;?>/stuff/css/ui.jqgrid.css" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/i18n/grid.locale-en.js"></script>
+    <script type="text/javascript">
+	jQuery.jgrid.no_legacy_api = true;
+    </script>
     <script type="text/javascript" src="<?=$baseUrl;?>/stuff/js/jquery.jqGrid.min.js"></script>
 
 <style type="text/css">
@@ -20,29 +24,31 @@
 
 <script type="text/javascript">
  //<![CDATA[
-  jQuery(document).ready(function(){
-
-     var mydata = <?= $this->attdsheet; ?>;
-
-        jQuery("#list").jqGrid({
-            data: mydata,
-            datatype: "local",
+ 
+   jQuery(document).ready(function(){
+var lastSel,mydata = <?=$this->data; ?>,
+                grid=$("#list");
+      
+      grid.jqGrid({
+            data:mydata,
+            datatype:"local",
             colNames: <?= $this->colnames; ?>,
             colModel: <?= $this->colmodel; ?>,
-            pager: '#pager',
-            rowNum: 10,
-            rowList: [5, 10, 20, 50],
+            rowNum: 10000,
             sortname: 'stud',
             sortorder: 'asc',
             viewrecords: true,
             gridview: true,
             forcefit: true,
             shrinktofit:true,
-            autowidth: true,
-            celledit : true,
-            height:"90%",
+            autowidth: true,            
+            cellEdit:true,
+            cellsubmit: "clientArray",
+	    height:"90%",
             caption:'Response: Attendance sheet for month <?=$this->month; ?>'
         });
+      $(".ui-jqgrid-titlebar").hide();
+       
    });
 
  //]]>
@@ -52,7 +58,7 @@
 
 <table id="list">
 </table>
-<div id="pager"></div>
+
 
 </body>
 </html>
