--- a/application/views/scripts/attendance/showgrid.phtml
+++ b/application/views/scripts/attendance/showgrid.phtml
@@ -27,7 +27,8 @@
  
    jQuery(document).ready(function(){
 var lastSel,mydata = <?=$this->data; ?>,
-                grid=$("#list");
+
+      grid=$("#list");
       
       grid.jqGrid({
             data:mydata,
@@ -39,15 +40,34 @@ var lastSel,mydata = <?=$this->data; ?>,
             sortorder: 'asc',
             viewrecords: true,
             gridview: true,
+            pager:"#pager",
+            hoverrows:false,
+            onSelectRow: function(id, e) {
+                 jQuery("#list>#"+id).removeClass('ui-state-hover');
+             },
             forcefit: true,
             shrinktofit:true,
-            autowidth: true,            
+            autowidth: true,
+            cellurl:'url',
             cellEdit:true,
             cellsubmit: "clientArray",
 	    height:"90%",
             caption:'Response: Attendance sheet for month <?=$this->month; ?>'
         });
+       //  $("#list").jqGrid('navGrid','#pager',{edit:true,add:true,del:true,search:true});
+        var gridData=jQuery("#list").jqGrid('getGridParam','data');
       $(".ui-jqgrid-titlebar").hide();
+
+$(".savebtn").click(function(event){
+    
+
+   $.post("attendance/save",{grid:gridData,month:<?=$this->month?>,year:<?=$this->year?>,classy:<?=$this->classy?>},function(data){
+          console.log(data);
+   });
+
+        event.preventDefault();
+
+});
        
    });
 
@@ -58,7 +78,8 @@ var lastSel,mydata = <?=$this->data; ?>,
 
 <table id="list">
 </table>
-
+    <div id="pager"></div>
+    <a href="#" class="btn btn-primary savebtn">save</a>
 
 </body>
 </html>
